Fixed Z-index issue with main menu on mobile

--- a/style.css
+++ b/style.css
@@ -1126,6 +1126,7 @@ body:has(#login-btn) main {
         max-height: 400px;
         opacity: 1;
         pointer-events: auto;
+        z-index: 1000;
     }
 
     .nav-btn {
